# life-leveling-cpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
include/core/: LifeLevelingApp.h
include/core/enums/: ActivityType.h  CleaningActivityType.h  ExerciseActivityType.h  FoodPrepActivityType.h  HygieneActivityType.h  YardWorkActivityType.h
include/core/utils/: ActivityUtil.h  CleaningActivityUtil.h
scripts/: build.sh  clear-build.sh  generate.sh  run.sh
src/: Main.cpp
src/core/: CMakeLists.txt  LifeLevelingApp.cpp
src/core/utils/: ActivityUtil.cpp  CMakeLists.txt  CleaningActivityUtil.cpp
